# game

./: CMakeLists.txt  MainMenu.cpp  main.py  requirements.txt
src/: MainMenu.cpp  MainMenu.h  sfml.cpp
